--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^23.1.0",
     "mongoose": "^5.1.6",
     "morgan": "^1.9.0",
-    "require-dir": "^1.0.0"
+    "require-dir": "^1.0.0",
+    "superagent": "^3.8.3"
   }
 }
