--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "eslint": "^5.0.0",
     "express": "^4.16.3",
     "jest": "^23.1.0",
+    "mockgoose": "^7.3.5",
     "mongoose": "^5.1.6",
     "morgan": "^1.9.0",
     "require-dir": "^1.0.0",
-    "superagent": "^3.8.3"
+    "superagent": "^3.8.3",
+    "supertest": "^3.1.0"
   }
 }
